chore: add more tests and improve openapi
